<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8BC34A"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/league_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/football_league"
            android:gravity="center"
            android:text="@string/test_text"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/matchday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/football_matchday"
            android:gravity="center"
            android:text="@string/test_text"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/football_share"
            android:text="@string/share_text"
            android:background="#8BC34A"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

</LinearLayout>
