<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:clickable="false"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_crest"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/football_home_crest" />

            <TextView
                android:id="@+id/home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/football_home_team"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/score_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/football_score"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/date_textview"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/game_clock_desc"
                android:gravity="center"
                android:text="@string/test_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/away_crest"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:contentDescription="@string/football_away_crest" />

            <TextView
                android:id="@+id/away_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@string/football_away_team"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/details_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>


